added edit user endpoints
